--- a/config.cfg.sample
+++ b/config.cfg.sample
@@ -9,7 +9,7 @@ NODE_ID=1
 DBA_EMAIL='dbas@example.com'
 BACKUP_EMAIL='dbas@example.com'
 BACKUP_USER="backups_user"
-BACKUP_SERVER="192.168.1.17"
+BACKUP_SERVER="backup.example.com"
 REMOTE_BACKUP_PATH="/backups/postgres/dumps"
 REMOTE_BACKUP_LOG_PATH="/backups/postgres/logs"
 BACKUP_CRON_LINE="#0 2 * * *"
